src/test/resources/typeSystemTestModels/valid/methods/MethodReturnVoid.java
package typeSystemTestModels.valid.methods;

import java.io.IOException;
import java.lang.IndexOutOfBoundsException;

public class MethodRedturnVoid {

  public void test1() {}
  
  public int test2() [][] {}

}
