src/test/resources/typeSystemTestModels/invalid/methods/MethodReturnVoid.java
package typeSystemTestModels.valid.methods;

import java.io.IOException;
import java.lang.IndexOutOfBoundsException;

public class MethodRedturnVoid {

  public void test() [][] {}
  
}